buddy_alloc_sys/buddy_alloc_1.2.0_x86_64-elf-gcc_freestanding/buddy_alloc.h

struct buddy;
size_t buddy_sizeof(size_t memory_size);
size_t buddy_sizeof_alignment(size_t memory_size, size_t alignment);
struct buddy *buddy_init(unsigned char *at, unsigned char *main, size_t memory_size);
struct buddy *buddy_init_alignment(unsigned char *at, unsigned char *main, size_t memory_size, size_t alignment);
struct buddy *buddy_embed(unsigned char *main, size_t memory_size);
struct buddy *buddy_get_embed_at(unsigned char *main, size_t memory_size);
struct buddy *buddy_embed_alignment(unsigned char *main, size_t memory_size, size_t alignment);
struct buddy *buddy_get_embed_at_alignment(unsigned char *main, size_t memory_size, size_t alignment);
struct buddy *buddy_resize(struct buddy *buddy, size_t new_memory_size);
bool buddy_can_shrink(struct buddy *buddy);
bool buddy_is_empty(struct buddy *buddy);
bool buddy_is_full(struct buddy *buddy);
size_t buddy_arena_size(struct buddy *buddy);
size_t buddy_arena_free_size(struct buddy *buddy);
void *buddy_malloc(struct buddy *buddy, size_t requested_size);
void *buddy_calloc(struct buddy *buddy, size_t members_count, size_t member_size);
void *buddy_realloc(struct buddy *buddy, void *ptr, size_t requested_size, bool ignore_data);
void *buddy_reallocarray(struct buddy *buddy, void *ptr,
    size_t members_count, size_t member_size, bool ignore_data);
void buddy_free(struct buddy *buddy, void *ptr);
enum buddy_safe_free_status {
    BUDDY_SAFE_FREE_SUCCESS,
    BUDDY_SAFE_FREE_BUDDY_IS_NULL,
    BUDDY_SAFE_FREE_INVALID_ADDRESS,
    BUDDY_SAFE_FREE_SIZE_MISMATCH,
    BUDDY_SAFE_FREE_ALREADY_FREE,
};
enum buddy_safe_free_status buddy_safe_free(struct buddy *buddy, void *ptr, size_t requested_size);
void buddy_reserve_range(struct buddy *buddy, void *ptr, size_t requested_size);
void buddy_unsafe_release_range(struct buddy *buddy, void *ptr, size_t requested_size);
void *buddy_walk(struct buddy *buddy, void *(fp)(void *ctx, void *addr, size_t slot_size, size_t allocated), void *ctx);
unsigned char buddy_fragmentation(struct buddy *buddy);
void buddy_debug(struct buddy *buddy);
struct buddy_tree;
struct buddy_tree_pos {
    size_t index;
    size_t depth;
};
struct buddy_tree_interval {
    struct buddy_tree_pos from;
    struct buddy_tree_pos to;
};
struct buddy_tree_walk_state {
    struct buddy_tree_pos starting_pos;
    struct buddy_tree_pos current_pos;
    unsigned int going_up;
    unsigned int walk_done;
};
static struct buddy_tree_interval buddy_tree_interval(struct buddy_tree *t, struct buddy_tree_pos pos);
enum buddy_tree_release_status {
    BUDDY_TREE_RELEASE_SUCCESS,
    BUDDY_TREE_RELEASE_FAIL_PARTIALLY_USED,
};
unsigned int buddy_tree_check_invariant(struct buddy_tree *t, struct buddy_tree_pos pos);
struct buddy {
    size_t memory_size;
    size_t alignment;
    union {
        unsigned char *main;
        ptrdiff_t main_offset;
    } arena;
    size_t buddy_flags;
};
struct buddy_embed_check {
    unsigned int can_fit;
    size_t offset;
    size_t buddy_size;
};
static struct buddy_tree *buddy_tree(struct buddy *buddy);
size_t buddy_sizeof(size_t memory_size) {
    return buddy_sizeof_alignment(memory_size, BUDDY_ALLOC_ALIGN);
}
size_t buddy_sizeof_alignment(size_t memory_size, size_t alignment) {
    size_t buddy_tree_order;
    if (!is_valid_alignment(alignment)) {
        return 0; 
    }
    if (memory_size < alignment) {
        return 0; 
    }
    buddy_tree_order = buddy_tree_order_for_memory(memory_size, alignment);
    return sizeof(struct buddy) + buddy_tree_sizeof((uint8_t)buddy_tree_order);
}
bool buddy_can_shrink(struct buddy *buddy) {
    if (buddy == NULL) {
        return false;
    }
    return buddy_is_free(buddy, buddy->memory_size / 2);
}
bool buddy_is_empty(struct buddy *buddy) {
    if (buddy == NULL) {
        return false;
    }
    return buddy_is_free(buddy, 0);
}
bool buddy_is_full(struct buddy *buddy) {
    struct buddy_tree *tree;
    struct buddy_tree_pos pos;
    if (buddy == NULL) {
        return false;
    }
    tree = buddy_tree(buddy);
    pos = buddy_tree_root();
    return buddy_tree_status(tree, pos) == buddy_tree_order(tree);
}
size_t buddy_arena_size(struct buddy *buddy) {
    if (buddy == NULL) {
        return 0;
    }
    return buddy->memory_size;
}
size_t buddy_arena_free_size(struct buddy *buddy) {
    size_t result = 0;
    struct buddy_tree *tree = buddy_tree(buddy);
    size_t tree_order = buddy_tree_order(tree);
    struct buddy_tree_walk_state state = buddy_tree_walk_state_root();
    do {
        size_t pos_status = buddy_tree_status(tree, state.current_pos);
        if (pos_status == (tree_order - state.current_pos.depth + 1)) { 
            state.going_up = 1;
        } else if (pos_status == 0) { 
            state.going_up = 1;
            result += size_for_depth(buddy, state.current_pos.depth);
        } else { 
            continue;
        }
    } while (buddy_tree_walk(tree, &state));
    return result;
}
void *buddy_malloc(struct buddy *buddy, size_t requested_size) {
    size_t target_depth;
    struct buddy_tree *tree;
    struct buddy_tree_pos pos;
    if (buddy == NULL) {
        return NULL;
    }
    if (requested_size == 0) {
        requested_size = 1;
    }
    if (requested_size > buddy->memory_size) {
        return NULL;
    }
    target_depth = depth_for_size(buddy, requested_size);
    tree = buddy_tree(buddy);
    pos = buddy_tree_find_free(tree, (uint8_t) target_depth);
    if (! buddy_tree_valid(tree, pos)) {
        return NULL; 
    }
    buddy_tree_mark(tree, pos);
    return address_for_position(buddy, pos);
}
void *buddy_calloc(struct buddy *buddy, size_t members_count, size_t member_size) {
    size_t total_size;
    void *result;
    if (members_count == 0 || member_size == 0) {
        members_count = 1;
        member_size = 1;
    }
    if (((members_count * member_size)/members_count) != member_size) {
        return NULL;
    }
    total_size = members_count * member_size;
    result = buddy_malloc(buddy, total_size);
    if (result) {
        memset(result, 0, total_size);
    }
    return result;
}
void *buddy_realloc(struct buddy *buddy, void *ptr, size_t requested_size, bool ignore_data) {
    struct buddy_tree *tree;
    struct buddy_tree_pos origin, new_pos;
    size_t current_depth, target_depth;
    void *source, *destination;
    if (ptr == NULL) {
        return buddy_malloc(buddy, requested_size);
    }
    if (requested_size == 0) {
        buddy_free(buddy, ptr);
        return NULL;
    }
    if (requested_size > buddy->memory_size) {
        return NULL;
    }
    tree = buddy_tree(buddy);
    origin = position_for_address(buddy, (unsigned char *) ptr);
    if (! buddy_tree_valid(tree, origin)) {
        return NULL;
    }
    current_depth = buddy_tree_depth(origin);
    target_depth = depth_for_size(buddy, requested_size);
    buddy_tree_release(tree, origin);
    new_pos = buddy_tree_find_free(tree, (uint8_t) target_depth);
    if (! buddy_tree_valid(tree, new_pos)) {
        buddy_tree_mark(tree, origin);
        return NULL;
    }
    if (origin.index == new_pos.index) {
        buddy_tree_mark(tree, origin);
        return ptr;
    }
    destination = address_for_position(buddy, new_pos);
    if (! ignore_data) {
        source = address_for_position(buddy, origin);
        memmove(destination, source, size_for_depth(buddy,
            current_depth > target_depth ? current_depth : target_depth));
    }
    buddy_tree_mark(tree, new_pos);
    return destination;
}
void *buddy_reallocarray(struct buddy *buddy, void *ptr,
        size_t members_count, size_t member_size, bool ignore_data) {
    if (members_count == 0 || member_size == 0) {
        return buddy_realloc(buddy, ptr, 0, ignore_data);
    }
    if ((members_count * member_size)/members_count != member_size) {
        return NULL;
    }
    return buddy_realloc(buddy, ptr, members_count * member_size, ignore_data);
}
void buddy_free(struct buddy *buddy, void *ptr) {
    unsigned char *dst, *main;
    struct buddy_tree *tree;
    struct buddy_tree_pos pos;
    if (buddy == NULL) {
        return;
    }
    if (ptr == NULL) {
        return;
    }
    dst = (unsigned char *)ptr;
    main = buddy_main(buddy);
    if ((dst < main) || (dst >= (main + buddy->memory_size))) {
        return;
    }
    tree = buddy_tree(buddy);
    pos = position_for_address(buddy, dst);
    if (! buddy_tree_valid(tree, pos)) {
        return;
    }
    buddy_tree_release(tree, pos);
}
enum buddy_safe_free_status buddy_safe_free(struct buddy* buddy, void* ptr, size_t requested_size) {
    unsigned char* dst, * main;
    struct buddy_tree* tree;
    struct buddy_tree_pos pos;
    size_t allocated_size_for_depth;
    enum buddy_tree_release_status status;
    if (buddy == NULL) {
        return BUDDY_SAFE_FREE_BUDDY_IS_NULL;
    }
    if (ptr == NULL) {
        return BUDDY_SAFE_FREE_INVALID_ADDRESS;
    }
    dst = (unsigned char*)ptr;
    main = buddy_main(buddy);
    if ((dst < main) || (dst >= (main + buddy->memory_size))) {
        return BUDDY_SAFE_FREE_INVALID_ADDRESS;
    }
    tree = buddy_tree(buddy);
    pos = position_for_address(buddy, dst);
    if (!buddy_tree_valid(tree, pos)) {
        return BUDDY_SAFE_FREE_INVALID_ADDRESS;
    }
    allocated_size_for_depth = size_for_depth(buddy, pos.depth);
    if (requested_size < buddy->alignment) {
        requested_size = buddy->alignment;
    }
    if (requested_size > allocated_size_for_depth) {
        return BUDDY_SAFE_FREE_SIZE_MISMATCH;
    }
    if (requested_size <= (allocated_size_for_depth / 2)) {
        return BUDDY_SAFE_FREE_SIZE_MISMATCH;
    }
    status = buddy_tree_release(tree, pos);
    switch (status) {
    case BUDDY_TREE_RELEASE_FAIL_PARTIALLY_USED:
        return BUDDY_SAFE_FREE_INVALID_ADDRESS;
    case BUDDY_TREE_RELEASE_SUCCESS:
        break;
    }
    return BUDDY_SAFE_FREE_SUCCESS;
}
void buddy_reserve_range(struct buddy *buddy, void *ptr, size_t requested_size) {
    buddy_toggle_range_reservation(buddy, ptr, requested_size, 1);
}
void buddy_unsafe_release_range(struct buddy *buddy, void *ptr, size_t requested_size) {
    buddy_toggle_range_reservation(buddy, ptr, requested_size, 0);
}
void *buddy_walk(struct buddy *buddy,
        void *(fp)(void *ctx, void *addr, size_t slot_size, size_t allocated),
        void *ctx) {
    unsigned char *main;
    size_t effective_memory_size, tree_order, pos_status, pos_size;
    struct buddy_tree *tree;
    unsigned char *addr;
    struct buddy_tree_walk_state state;
    struct buddy_tree_pos test_pos;
    void *callback_result;
    if (buddy == NULL) {
        return NULL;
    }
    if (fp == NULL) {
        return NULL;
    }
    main = buddy_main(buddy);
    effective_memory_size = buddy_effective_memory_size(buddy);
    tree = buddy_tree(buddy);
    tree_order = buddy_tree_order(tree);
    state = buddy_tree_walk_state_root();
    do {
        pos_status = buddy_tree_status(tree, state.current_pos);
        if (pos_status != (tree_order - state.current_pos.depth + 1)) { 
            continue;
        }
        test_pos = buddy_tree_left_child(state.current_pos);
        if (buddy_tree_valid(tree, test_pos) && buddy_tree_status(tree, test_pos)) {
            continue;
        }
        pos_size = effective_memory_size >> (state.current_pos.depth - 1u);
        addr = address_for_position(buddy, state.current_pos);
        if (((size_t)(addr - main) + pos_size) > buddy->memory_size) {
            return NULL;
        }
        callback_result = (fp)(ctx, addr, pos_size, pos_status > 0);
        if (callback_result != NULL) {
            return callback_result;
        }
        state.going_up = 1;
    } while (buddy_tree_walk(tree, &state));
    return NULL;
}
unsigned char buddy_fragmentation(struct buddy *buddy) {
    if (buddy == NULL) {
        return 0;
    }
    return buddy_tree_fragmentation(buddy_tree(buddy));
}
static struct buddy_tree *buddy_tree(struct buddy *buddy) {
    return (struct buddy_tree*) ((unsigned char *)buddy + sizeof(*buddy));
}
void buddy_debug(struct buddy *buddy) {
    BUDDY_PRINTF("buddy allocator at: %p arena at: %p\n", (void *)buddy, (void *)buddy_main(buddy));
    BUDDY_PRINTF("memory size: %zu\n", buddy->memory_size);
    BUDDY_PRINTF("mode: ");
    if (buddy_relative_mode(buddy)) {
        BUDDY_PRINTF("embedded");
    } else {
        BUDDY_PRINTF("standard");
    }
    BUDDY_PRINTF("\n");
    BUDDY_PRINTF("virtual slots: %zu\n", buddy_virtual_slots(buddy));
    BUDDY_PRINTF("allocator tree follows:\n");
    buddy_tree_debug(buddy_tree(buddy), buddy_tree_root(), buddy_effective_memory_size(buddy));
}
struct buddy_tree {
    size_t upper_pos_bound;
    size_t size_for_order_offset;
    uint8_t order;
};
struct internal_position {
    size_t local_offset;
    size_t bitset_location;
};
static struct buddy_tree_interval buddy_tree_interval(struct buddy_tree *t, struct buddy_tree_pos pos) {
    struct buddy_tree_interval result;
    size_t depth;
    result.from = pos;
    result.to = pos;
    depth = pos.depth;
    while (depth != t->order) {
        result.from = buddy_tree_left_child(result.from);
        result.to = buddy_tree_right_child(result.to);
        depth += 1;
    }
    return result;
}
unsigned int buddy_tree_check_invariant(struct buddy_tree *t, struct buddy_tree_pos pos) {
    unsigned int fail = 0;
    struct buddy_tree_walk_state state = buddy_tree_walk_state_root();
    state.current_pos = pos;
    do {
        struct internal_position current_internal = buddy_tree_internal_position_tree(t, pos);
        size_t current_status = read_from_internal_position(buddy_tree_bits(t), current_internal);
        size_t left_child_status = buddy_tree_status(t, buddy_tree_left_child(pos));
        size_t right_child_status = buddy_tree_status(t, buddy_tree_right_child(pos));
        unsigned int violated = 0;
        if (left_child_status || right_child_status) {
            size_t min = left_child_status <= right_child_status
                ? left_child_status : right_child_status;
            if (current_status != (min + 1)) {
                violated = 1;
            }
        } else {
            if ((current_status > 0) && (current_status < current_internal.local_offset)) {
                violated = 1;
            }
        }
        if (violated) {
            fail = 1;
            BUDDY_PRINTF("invariant violation at position [ index: %zu depth: %zu ]!\n", pos.index, pos.depth);
            BUDDY_PRINTF("current: %zu left %zu right %zu max %zu\n",
                current_status, left_child_status, right_child_status, current_internal.local_offset);
        }
    } while (buddy_tree_walk(t, &state));
    return fail;
}